//todo: rest API http://jitpack.io/docs/API

//CONFIG:
///////////////////////////////////////////////////////////////////////////////////////////
buildscript {
  repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
  }
  dependencies {
    classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
  }
}
plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java-library'
}
apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'maven'
repositories {
	maven { url 'https://jitpack.io' }
    mavenCentral()
}
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

// in eclipse right click and refresh build gradle

// PROJECT:
///////////////////////////////////////////////////////////////////////////////////////////
/* sourceSets {e 
   main {
      java { srcDirs = ["src"]}
   }
}*/
dependencies {
	// https://mvnrepository.com/artifact/org.apache.httpcomponents.core5/httpcore5:
	implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.0-beta11'

  implementation 'io.minio:minio:6.0.11'

	implementation group: 'de.neuland-bfi',				name: 'jade4j', 	  	version: '1.3.0'
	implementation group: 'com.googlecode.json-simple',name: 'json-simple',	version: '1.1.1'
	implementation group: 'commons-dbutils', 			name: 'commons-dbutils',version: '1.7'
	implementation group: 'org.xerial', 				name: 'sqlite-jdbc', 	version: '3.30.1'
	implementation 'com.github.blocoio:faker:1.2.8'

	implementation group: 'org.apache.poi', 			  name: 'poi', 			  version: '4.1.1'

	//javolution
    implementation fileTree(dir: 'libs', include: ['*.jar'])

	//test
	implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '4.0.0-alpha-4'

}

// BULID:
///////////////////////////////////////////////////////////////////////////////////////////
// Name of this project
archivesBaseName = 'SNX'
shadowJar {
   baseName = 'SNX'
   classifier = ''
   archiveVersion = ''
}
tasks.build.dependsOn tasks.shadowJar
artifacts {
    archives shadowJar
}
task cleanUp() {
  println 'clean build'
  delete './build'
}
defaultTasks 'cleanUp', 'install'

// DEPLOY:
///////////////////////////////////////////////////////////////////////////////////////////
// needs jitpack.yaml in root for java version and gradle for its version
group = 'com.github.jitpack'

/* wrapper {
  gradleVersion = "6.0.1"
  distributionType = Wrapper.DistributionType.ALL
} */

// push. release. built. test. 
// eg: http://jitpack.io/#cekvenich/SNX/0.0.12
